fix edit button/delete button spacing

--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -26,6 +26,7 @@
 .spotInfo {
   font-size: 15px;
   display: flex;
+  justify-content: space-between;
 }
 .img-container {
   width: 100%;
@@ -267,7 +268,7 @@
   cursor: pointer;
   border: none;
   font-size: 16px;
-  margin-left: 50%;
+  margin-left: 70%;
   margin-bottom: 10px;
   margin-right: 20px;
   border-radius: 12px;
@@ -275,4 +276,14 @@
 
 .noEdit {
   visibility: hidden;
+}
+
+.noDelBttn {
+  visibility: hidden;
+}
+
+.seeDelBttn {
+  border: none;
+  font-size: 15px;
+  margin-bottom: 12px;
 }
